--- a/_config.yml
+++ b/_config.yml
@@ -1,4 +1,5 @@
-title: Just the Docs Template
+
+title: Data Science Seminar 
 description: A starter template for a Jeykll site using the Just the Docs theme!
 theme: just-the-docs
 
