--- a/_config.yml
+++ b/_config.yml
@@ -13,7 +13,7 @@
 # you will see them accessed via {{ site.title }}, {{ site.github_repo }}, and so on.
 # You can create any custom variable you would like, and they will be accessible
 # in the templates via {{ site.myvariable }}.
-title: Data Science Seminar Page
+title: Data Science Seminar
 description: This page includes the plan for the seminar meetings where we talk about Statistics, R, Data Science and other stuffs. 
 baseurl:  # the subpath of your site, e.g. /blog
 url: "https://sthossain.github.io/datagroup" # the base hostname & protocol for your site, e.g. http://example.com
